# togomcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  example_server.py  pyproject.toml  renovate.json
.claude/: settings.json
.claude/agents/: mie-builder.md
.claude/workflows/: mie-refresh.js
.github/workflows/: catalog.yml  changelog.yml  package-skills.yml  renovate.yml
benchmark/: QA_CREATION_GUIDE.md  README.md  keywords.tsv  togomcp_qa_prompt.md
benchmark/ablation/: .gitignore  FINDINGS.md  README.md  _serve.py  ablate_mie.py  ablation_analysis.py  analyze_keep.py  append_results.py  run_ablation.py  select_pilot.py
benchmark/conditions/: .gitignore  README.md  conditions_analysis.py  run_conditions.py
benchmark/examples/: disease_analysis_example.md  research_article_analysis_example.md
benchmark/questions/: coverage_tracker.yaml  question_002.yaml  question_004.yaml  question_005.yaml  question_006.yaml  question_007.yaml  question_008.yaml  question_009.yaml  question_010.yaml  question_011.yaml  question_012.yaml  (+72 more)
docs/: MIE_file_specs.md  db_exploration.md  example2.md  example3.md  make_intro.md  togomcp-intro.html
evaluation/: EVALUATION_README.md  QUESTION_DESIGN_GUIDE.md  README.md  database_exploration_Q01.md  togomcp_evaluation_rubric.md  togomcp_evaluation_template.md  togomcp_evaluation_tracker.csv  togomcp_evaluation_tracker.md  togomcp_quick_eval_form.md
evaluation2/: BioASQ_TogoMCP.md  PROCESS_SUMMARY.md  QA_CREATION_GUIDE.md  QA_ERROR_CHECK_REPORT.md  QUESTION_FORMAT.md  QUESTION_WORKSHEET.md  QUICK_GUIDE.md  README.md  question_quality.md  redundancy.md  togomcp_qa_prompt.md
kw_search/: CHANGES.md  COMPLETION_SUMMARY.md  INDEX.md  README.md  REVISION_SUMMARY.md  TEMPLATE_REVISED.md  bacdive.md  chebi.md  chembl.md  clinvar.md  ddbj.md  ensembl.md  glycosmos.md  go.md  medgen.md  mediadive.md  mesh.md  mondo.md  nando.md  ncbigene.md  pdb.md  pubchem.md  pubmed.md  pubtator.md  reactome.md  rhea.md  taxonomy.md  uniprot.md
mie/: amrportal.yaml  bacdive.yaml  chebi.yaml  chembl.yaml  clinvar.yaml  ddbj.yaml  ensembl.yaml  glycosmos.yaml  go.yaml  medgen.yaml  mediadive.yaml  mesh.yaml  mondo.yaml  nando.yaml  ncbigene.yaml  pdb.yaml  pubchem.yaml  pubmed.yaml  pubtator.yaml  reactome.yaml  rhea.yaml  supercon.yaml  taxonomy.yaml  uniprot.yaml
rdf-config/: template.yaml
resources/: MIE_prompt.md  MIE_prompt_changes.md  MIE_prompt_revised.md  TogoMCP_Usage_Guide_Concise.md  endpoints.csv  kwsearch_sparql_template.md  question_generation_phase1.md  question_generation_phase2.md  rdf_portal_guide.md  sparql_query_improvement.md  togomcp_sparql_search_reference.md  togomcp_usage_guide.md  togomcp_usage_guide_new.md
scripts/: bootstrap_mie_keywords.py  check_mie_examples.py  deploy.sh  generate_usage_guide_catalog.py  make_shex.sh  make_sparql_examples.sh  run_docker.sh
shex/: bacdive.shex  bgee.shex  chebi.shex  chembl.shex  chip-atlas.shex  civic.shex  clinvar.shex  dbcatalog.shex  dbnsfp.shex  dbscsnv.shex  dbsnp.shex  dbvar.shex  ddbj.shex  dgidb.shex  ensembl.shex  exac.shex  expressionatlas.shex  famsbase.shex  fanta_bio.shex  ggdonto.shex  glycoepitope.shex  glycosmos.shex  glytoucan.shex  go.shex  gtdb.shex  gwascatalog.shex  hco.shex  hgnc.shex  hint.shex  homologene.shex  hop.shex  hpo.shex  imethyl.shex  instruct.shex  interview-form.shex  jcm.shex  jpostdb.shex  kero.shex  knapsack.shex  linked_icgc.shex  (+34 more)
sparql-examples/: chip-atlas.rq  dbsnp.rq  dbvar.rq  ddbj.rq  hco.rq  hint.rq  interview-form.rq  linked_icgc.rq  mbgd.rq  nikkaji.rq  opentggates.rq  pgdbj.rq  sra_experiment.rq  ssbd.rq  test.rq
tests/: conftest.py  test_api_tools.py  test_catalog_in_sync.py  test_chembl.py  test_json_string_returns.py  test_logging.py  test_ncbi_tools.py  test_server.py  test_stats.py  test_togovar.py  test_tool_descriptions.py
togo_mcp/: __init__.py  admin.py  api_tools.py  chembl.py  main.py  ncbi_tools.py  rdf_portal.py  server.py  stats.py  togoid.py  togovar.py
workflows/: disease_analysis.md  research_article_analysis.md
(+446 files in other folders)
