[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["togo_mcp*"]

[project]
name = "togo-mcp"
version = "0.1.0"
description = "MCP Servers for using the RDF Portal"
authors = [
    {name = "Akira R. Kinjo"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.28.1",
    "pydantic>=2.0"
]

[project.scripts]
togo-mcp-server = "togo_mcp.main:run"
togo-mcp-admin = "togo_mcp.main:run_admin"

[project.urls]
"Homepage" = "https://github.com/arkinjo/togo-mcp"
"Repository" = "https://github.com/arkinjo/togo-mcp"

[project.optional-dependencies]
dev = [
    "pytest", # for running tests
    "ruff",   # for linting and formatting
    "black",  # for code formatting
]
