[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["togo_mcp*"]

[tool.setuptools.package-data]
togo_mcp = [
    "data/resources/**/*",
    "data/mie/**/*",
    "data/docs/**/*",
]

[project]
name = "togo-mcp"
version = "1.2.0"
description = "MCP Servers for using the RDF Portal"
authors = [
    {name = "Akira R. Kinjo"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.4.3",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
togo-mcp-server = "togo_mcp.main:run"
togo-mcp-local = "togo_mcp.main:run_local"

[project.urls]
"Homepage" = "https://github.com/dbcls/togomcp"
"Repository" = "https://github.com/dbcls/togomcp"

[project.optional-dependencies]
dev = [
    "pytest",          # for running tests
    "pytest-asyncio",  # for async test support
    "respx",           # for mocking httpx requests
    "ruff",            # for linting and formatting
    "black",           # for code formatting
    # Benchmark / ablation harness (benchmark/scripts, benchmark/ablation).
    # Kept here so `uv sync --extra dev` no longer prunes them from .venv.
    "claude-agent-sdk",  # automated_test_runner.py — collects answers via the Claude CLI
    "pandas",            # add_llm_evaluation.py — reads/writes the results CSVs
    "anthropic",         # add_llm_evaluation.py — the Anthropic LLM judge (Messages API)
    "ollama",            # add_llm_evaluation.py — local judges (Gemma, Qwen) via Ollama
]
